# Secure-Password

./: .gitignore  ACKNOWLEDGEMENTS.md  ACKNOWLEDGEMENTS_WORD_VERSION.md  CMakeLists.txt  LICENSE  PROJECT_DOCUMENTATION_FOR_PROFESSOR.md  PROJECT_REPORT.md  README.md  gcs_config.json  gen_certs.bat
include/: auth.h  crypto.h  gcs_client.h  password_gen.h  ui.h  vault.h
public/: app.js  index.html  style.css
src/: auth.cpp  crypto.cpp  gcs_client.cpp  main.cpp  password_gen.cpp  ui.cpp  vault.cpp
